--- a/src/pages/albums.module.scss
+++ b/src/pages/albums.module.scss
@@ -5,11 +5,15 @@
 }
 
 .album_container {
-    width: 600px;
-    height: 100px;
+    width: auto;
+    height: auto;
     background-color: aquamarine;
-    display: grid;
-    grid-template-columns: auto 100px 100px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 10px;
+    grid-template-columns: 150px 1fr 100px 50px 50px;
     
 }
 
@@ -23,3 +27,9 @@
     font-family: Montserrat;
     font-size: large;
 }
+
+// .img {
+//     width: 100px;
+//     height: 50px;
+//     z-index: 20;
+// }
