artistSlice и еще немного стилей

--- a/src/Components/category.module.scss
+++ b/src/Components/category.module.scss
@@ -15,3 +15,8 @@
     background-color: opacify($color: aquamarine, $amount: 0.7);
     border: none;
 }
+
+.nav_element {
+    text-decoration: none;
+    color: black;
+}
