--- a/src/layouts/pagelayout.module.scss
+++ b/src/layouts/pagelayout.module.scss
@@ -2,18 +2,18 @@ body {
     background: no-repeat;
     background-size: 100%;
     height: 100%;
-  background-image: url('../../public/image/canvas.jpg');
+  // background-image: url('../../public/image/canvas.jpg');
+  background-color:rgb(58, 213, 161);
 }
 
 .main_container {
   display: flex;
-//   background: no-repeat;
-//     background-size: 100%;
-//   background-image: url('../../public/image/canvas.jpg');
+  width: 1440px;
+  height: 100vh;
+
 
 }
 
 .footer {
   flex: 0 0 auto;
-
 }
