--- a/src/pages/InnerFavoriets/album.module.scss
+++ b/src/pages/InnerFavoriets/album.module.scss
@@ -3,3 +3,10 @@
     display: flex;
     flex-direction: row;
 }
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color:rgb(38, 118, 91);
+}
