--- a/src/Components/getinfo.module.scss
+++ b/src/Components/getinfo.module.scss
@@ -2,11 +2,14 @@
     background-color: transparent;
     border: none;
     font-family: Montserrat;
-    font-size: x-large;
+    font-size: 90%;
     width: 100px;
     height: 50px;
 }
 .button:hover {
     background-color: opacify($color: aquamarine, $amount: 0.7);
     border: none;
+}
+.button:active {
+    color: blue;
 }
