--- a/src/pages/albums.module.scss
+++ b/src/pages/albums.module.scss
@@ -5,21 +5,22 @@
 }
 
 .album_container {
-    width: auto;
+    width: 850px;
     height: auto;
     background-color: aquamarine;
     display: flex;
-    flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     gap: 10px;
     grid-template-columns: 150px 1fr 100px 50px 50px;
+    margin: 0 auto;
     
 }
 
 .album_name {
     font-family: Montserrat;
-    font-size: large;
+    font-size: 15px;
+    text-align: center;
 }
 
 .href {
@@ -28,8 +29,8 @@
     font-size: large;
 }
 
-// .img {
-//     width: 100px;
-//     height: 50px;
-//     z-index: 20;
-// }
+.img {
+    width: 90px;
+    height: 90px;
+    z-index: 20;
+}
